Fix copy constructor not setting m_bypassProxy.

This caused crashes all over the place because now operator== fails.

This will need a 1.6.2 hotfix release.

BUG:366374
CCMAIL:anselmolsm@gmail.com